Mon Aug 28 09:36:32 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/cspublic.h:
	- applied Norbert Sendetzky patch for ctlib compatibility

Fri Aug 25 11:03:40 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/unittests/Makefile.am src/dblib/unittests/t0017.c:
	* src/dblib/unittests/t0017.in.be(added):
	- fix big endian problem with t0017 test

Fri Aug 25 09:17:37 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/tsql.c: remove 1024 char limit on tsql_readline

Thu Aug 24 21:18:48 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/tsql.c: applied Christos Zoulas patch for no-tty

Thu Aug 24 16:29:17 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/sybdb.h src/dblib/dblib.c:
	- do not change compatibility
	* src/tds/config.c: small optimization

Thu Aug 24 11:37:15 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* m4/sprintf_i64_format.m4: fix 64bit problem for LP64

Thu Aug 24 11:17:26 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds_sysdep_private.h src/apps/tsql.c src/ctlib/Makefile.am:
	* src/dblib/Makefile.am src/tds/net.c win32/initnet.c:
	* win32/winsetup.c win32/dev-cpp/FreeTDS.dev:
	* win32/dev-cpp/Makefile.win win32/msvc6/FreeTDS.dsp:
	- initialize socket library on win32

Thu Aug 24 08:32:07 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/tsql.c:
	- do not print return status if quiet (patch from Christos Zoulas)

Wed Aug 23 21:43:50 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* doc/tsql.txt: applied Christos Zoulas updates
	* doc/txt2man: updated

Wed Aug 23 17:16:10 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/net.c:
	- clean error before reading SO_ERROR, some system need this
	* src/tds/util.c src/ctlib/ct.c: cross compile fixes

Wed Aug 23 16:25:25 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* m4/ac_tds_func_which_getpwuid_r.m4 m4/sprintf_i64_format.m4: